<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/update"
    tools:context=".Updateactivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp">

        <EditText
            android:id="@+id/referenceTopic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/lavender_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_topics"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/updateName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/lavender_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_names"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/updatePhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/lavender_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_your_phone_numbers"
            android:inputType="phone"
            android:padding="16dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/updateEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/lavender_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_emails"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/updateQuentity"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/lavender_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_quentitys"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/updateDiscription"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints=""
            android:background="@drawable/lavender_border"
            android:gravity="start|center_vertical"
            android:hint="@string/enter_discriptions"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#E91E63"
            android:text="@string/updates"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize,VisualLintButtonSize,VisualLintBounds" />
    </LinearLayout>
</LinearLayout>