<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@drawable/admin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="160dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/mainUpload"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#6F23F8"
            android:text="@string/upload"
            android:textColor="#000000"
            android:textSize="22sp"
            app:cornerRadius="20dp"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainUpdate"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:backgroundTint="#F04848"
                android:padding="16dp"
                android:text="@string/update"
                android:textColor="#3F000C"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/lavender"
                app:strokeWidth="2dp"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mainDelete"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="#37AD86"
                android:padding="16dp"
                android:text="@string/delete"
                android:textColor="#3F000C"
                android:textSize="20sp"
                app:cornerRadius="20dp"
                app:strokeColor="@color/lavender"
                app:strokeWidth="2dp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>